# ANIDSC

./: .gitignore  README.md  classes.dot  commands  deploy_commands  gen_uml.sh  packages.dot  pyproject.toml
code/: adv_gen.py  evaluate_models.py  feature_extraction.py  generate_report.py  job.sh  main.py  utils.py
code/adversarial_attacks/: base_adversarial_attack.py  liuer_mihou.py
code/datasets/: custom_dataset.py
code/feature_extractors/: __init__.py  after_image.py  after_image_graph.py  base.py  (+3 more)
docker_root/: Dockerfile.exp  Dockerfile.vis
examples/: adv_gen.py  evaluate_models.py  experiments.py  feature_extraction.py  generate_report.py  live_detection.py  misc.py  summarize_results.py  visualizations.py
features/: 1_feature_extraction_chain.feature  2_basic_chain.feature  3_graph_chain.feature  4_cdd_chain.feature  4_summarize_results.feature  5_graph_cdd_chain.feature  6_evaluate_results.feature  adversarial_attack_chain.feature  afterimage.feature  basic_chain.feature  boxplot.feature  cdd_chain.feature  concept_drift.feature  end_to_end_chain.feature  environment.py  evaluate_model.feature  evaluate_results.feature  feature_extractor.feature  graph_cdd_chain.feature  graph_chain.feature  homogeneous_model.feature  lager.feature  multilayer.feature  simple_graph.feature
src/: evaluate_models.py  feature_extraction.py  generate_report.py  job.sh  utils.py
visualisations/: README.md  app.py  config.py  data_manager.py  hgraph.py  main.py  multi-layer.py  multilayer_graph.html  network_hierarchy.html  plot_manager.py  utils.py  widget_manager.py
(+311 files in other folders)
