[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ANIDSC"
version = "0.1.0"
authors = [
  { name="Ke He", email="kh695640204@gmail.com" },
]
description = "Adversarial testing framework for NIDS"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
    "Development Status :: 1 - Planning"
]

[project.urls]
Homepage = "https://github.com/kihy/ANIDSC"
Issues = "https://github.com/kihy/ANIDSC/issues"